# Bayesian-Pocket

./: .gitignore  README  bayesian.hs  cabal.config  pocket.cabal  pocket.hs  spider.hs
