Name:                pocket
Version:             0.1
Description:         Combined link crawler and bayesian filter
License:             GPL
Author:              Daniel Öberg
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable pocket
  Main-is:           pocket.hs
  ghc-options:       -O3 -threaded -rtsopts -with-rtsopts=-N
  Build-Depends:     base >= 3 && < 5, 
                     text >= 0.11 && < 0.20,
                     containers >= 0.4 && < 0.5,
                     split >= 0.1 && < 0.2,
                     HTTP >= 4000 && < 7000,
                     network >= 2.3 && < 3.0,
                     hxt >= 9 && < 10,
                     hslogger >= 1.1 && < 1.3,
                     haskeline >= 0.6 && < 1.0,
                     stm >= 2.2 && < 3.0,
                     filepath >= 1.2 && < 2.0,
                     directory >= 1.1 && < 2.0,
                     process >= 1.0 && < 2.0,
                     mtl >= 2.0 && < 3.0
