Name:                Pocket
Version:             0.1
Synopsis:            Fantastic combinaion of a bayesian filter and a linkcrawler
Description:         Fantastic combinaion of a bayesian filter and a linkcrawler
License:             MIT
Author:              Daniel Öberg
Maintainer:          daniel.oberg@mjukvaruutveckling.se
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable pocket
  Main-is: pocket.hs
  Build-depends:
    base >= 4,
    bytestring >= 0.9.1,
    mtl >= 2,
    text >= 0.11,
    time >= 1.1,
    xmlhtml >= 0.1.0,
    containers >= 0.4.0,
    split >= 0.0,
    hxt >= 9.0,
    HTTP >= 4000.0,
    http-conduit >= 2.1.0,
    network,
    hslogger >= 1.0,
    haskeline >= 0.6.0,
    stm >= 2.0,
    filepath >= 1.0,
    directory >= 1.0,
    process >= 1.0,
    regex-posix >= 0.94,
    regex-base >= 0.93,
    regex-compat >= 0.0,
    pcre-light >= 0.0,
    transformers >= 0.3.0.0,
    http-types >= 0.8.5,
    safe >= 0.3.3
  Ghc-options: -rtsopts -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -with-rtsopts=-N
